# Shroomish_Flag_Checker_App

./: README.md  anything.jks  settings.gradle.kts
app/: build.gradle.kts
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/androidTest/java/com/example/shroomish_flag_checker/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  shroomish_flag_checker.cpp  whatsfun.cpp
app/src/main/java/com/example/shroomish_flag_checker/: MainActivity.kt  wee.kt
app/src/main/java/com/example/shroomish_flag_checker/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/shroomish_flag_checker/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
